--- a/src/pages/demo/style.less
+++ b/src/pages/demo/style.less
@@ -1,4 +1,4 @@
-.content {
-    padding: 100px;
-    background-color: blue;
+.styl-content {
+    font-size: 30px;
+    border: 10px solid #000;
 }
